--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,11 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 
+# ignore local user specific files
 .git
 .vscode
 Manifest.toml
+test/Manifest.toml
 
 # ignore julia internal git files in the dev folder
 _git2_*
