ignore docs/Manifest.toml

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ docs/site/
 .vscode
 Manifest.toml
 test/Manifest.toml
+docs/Manifest.toml
 
 # ignore julia internal git files in the dev folder
 _git2_*
