--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "7ffdda62-db04-4838-9798-febd00f3125c"
 authors = ["Humans of Julia"]
 version = "0.1.0"
 
+[deps]
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+
 [compat]
 julia = "1"
 
