set up connection example

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ docs/site/
 Manifest.toml
 test/Manifest.toml
 docs/Manifest.toml
+localblob.jl
 
 # ignore julia internal git files in the dev folder
 _git2_*
