--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         version:
           - '1.5'
           - 'nightly'
+        python-version: [3.8]
         os:
           - ubuntu-latest
           - macOS-latest
@@ -22,8 +23,17 @@ jobs:
         exclude:
           - os: macOS-latest
             arch: x86
+            
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python 🐍
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies 🔧
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install grakn-client
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
