--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
+          architecture: ${{ matrix.arch }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
