--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           - x86
         exclude:
           - os: macOS-latest
+          - os: windows-latest
             arch: x86
     steps:
       - uses: actions/checkout@v2
