--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,12 +18,28 @@ jobs:
           - windows-latest
         arch:
           - x64
-          - x86
-        exclude:
-          - os: macOS-latest
-            arch: x86
+        # - x86
+        # exclude:
+          # - os: macOS-latest
+          # - os: windows-latest
+          #    arch: x86
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python 🐍
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+          architecture: ${{ matrix.arch }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install grakn-client
+
+      - name: Install dependecies 
+        uses: VaultVulp/action-pipenv@v2.0.1
+        with:
+          command: install -d # Install all dependencies, including development ones
+      
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
