--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       
       - name: Get ENV Variables for 🐍 📞
         run: |
-          echo "python-path="RUNNER_TOOL_CACHE/Python/${{ matrix.python }}"" >> $GITHUB_ENV
+          echo "python-path="${{ env.pythonLocation }}"" >> $GITHUB_ENV
           print(${{ env.python-path }})
 
       - name: Set ENV Variables for 🐍 📞
