--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,10 @@ jobs:
 
       - name: Set ENV Variables for 🐍 📞
         run: |
-          echo ENV["PYTHON"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-
+          ENV["PYTHON"] = "${{ env.pythonLocation }}"
+          ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}"
+          ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}"
+          
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
@@ -96,6 +96,7 @@ jobs:
 
 
       - uses: julia-actions/julia-buildpkg@v1
+              
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
