--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,10 @@ jobs:
 
       - name: Set ENV Variables for 🐍 📞
         run: |
-          ENV["PYTHON"] = "${{ env.pythonLocation }}"
-          ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}"
-          ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}"
-          
+          echo ENV["PYTHON"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
@@ -94,8 +94,11 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
 
-
       - uses: julia-actions/julia-buildpkg@v1
+        run: |
+          echo $ENV["PYTHON"]
+          echo $ENV["PYCALL_JL_RUNTIME_PYTHONHOME"]
+          echo $ENV["PYCALL_JL_RUNTIME"]
               
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
