--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,14 +52,6 @@ jobs:
         run: python -c "import sys; print(sys.version)"
           # architecture: ${{ matrix.arch }}
       
-
-
-      - name: Set ENV Variables for 🐍 📞
-        run: |
-          echo ENV["PYTHON"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
@@ -72,18 +64,21 @@ jobs:
           echo "::set-output name=dir::$(pip cache dir)"
     
       - uses: actions/cache@v2
+      - name: Cache 🐍
         with:
           path: ${{ env.pythonLocation }}
           key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}-${{ hashFiles('requirements.txt') }}
 
       # Julia Tasks
       - uses: julia-actions/setup-julia@v1
+      - name: Setup Julia
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
 
 
       - uses: actions/cache@v2
+      - name: Cache Julia
         env:
           cache-name: cache-artifacts
         with:
@@ -94,6 +89,12 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
 
+      - name: Set ENV variables for 🐍 📞
+        run: |
+          echo ENV["PYTHON"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          
       - name: Build Julia pkg
         run: |
           echo $ENV["PYTHON"]
@@ -102,8 +103,13 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
               
       - uses: julia-actions/julia-runtest@v1
+      - name: Test Julia
+
       - uses: julia-actions/julia-processcoverage@v1
+      - name: Julia Processcoverage
+
       - uses: codecov/codecov-action@v1
+      - name: Code Coverage
         with:
           file: lcov.info
 
