--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-              
+
       - name: Build Julia pkg
         run: |
           echo $ENV["PYTHON"]
@@ -108,12 +108,20 @@ jobs:
           PYTHON : ${{ env.pythonLocation }}
           PYCALL_JL_RUNTIME_PYTHONHOME: ${{ env.pythonLocation }}
           PYCALL_JL_RUNTIME: ${{ env.pythonLocation }}
+      - run: |
+          julia --project=src -e '
+          using Pkg
+          Pkg.build("PyCall")
               
       - uses: julia-actions/julia-runtest@v1
         env:
           PYTHON : ${{ env.pythonLocation }}
           PYCALL_JL_RUNTIME_PYTHONHOME: ${{ env.pythonLocation }}
-          PYCALL_JL_RUNTIME: ${{ env.pythonLocation }}      
+          PYCALL_JL_RUNTIME: ${{ env.pythonLocation }}
+      - run: |
+          julia --project=src -e '
+          using Pkg
+          Pkg.build("PyCall")
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
