--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         version:
           - '1.5'
           - 'nightly'
-        python: [3.7, 3.8]
+        python: [3.7]
         os:
           - ubuntu-latest
           - macOS-latest
