--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
             pip install -U pip
             pip install -r requirements.txt 
       
-      - name: debug pyenv
+      - name: Debug pyenv
         run: echo ${{ steps.pyenv_installation.outputs.pyenv_root }}
 
       - name: Display Python version
