--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,51 +45,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up 🐍 ${{ matrix.python }}
-      - uses: s-weigand/setup-conda@v1
+      - uses: conda-incubator/setup-miniconda@v2
         with:
-          update-conda: true
-          python-version: ${{ matrix.python }}                 
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-        
-      
-      - name: Debug conda
-        run: |
-          echo ${{ CONDA }}
-          conda --version
-          which python 
+          auto-update-conda: true
+          python-version: ${{ matrix.python }}
+      - name: Conda info
+        shell: bash -l {0}
+        run: conda info
+      - name: Conda list
+        shell: pwsh
+        run: conda list 
 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
           # architecture: ${{ matrix.arch }}
+             
       
-      - name: Set ENV Variables for 🐍 📞
-        run: |
-          echo ENV["PYTHON"] = "${{ env.pyenv_root }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pyenv_root }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pyenv_root }}" >> $GITHUB_ENV
-
-      - name: Debug Python location
-        run: |
-          echo $ENV["PYTHON"]
-          echo $ENV["PYCALL_JL_RUNTIME_PYTHONHOME"]
-          echo $ENV["PYCALL_JL_RUNTIME"]
-
-      - name: Install dependencies 🔧
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
-      - name: Get pip cache dir
-        id: pip-cache
-        run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      
-      - uses: actions/cache@v2      
-        with:
-          path: ${{ env.pyenv_root }}
-          key: ${{ env.pyenv_root }}-${{ hashFiles('setup.py') }}-${{ hashFiles('requirements.txt') }}
 
       # Julia Tasks
       - uses: julia-actions/setup-julia@v1
