--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,44 +44,46 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up 🐍 ${{ matrix.python }}
-        uses: conda-incubator/setup-miniconda@v2
+        uses: actions/setup-python@v2
         with:
-          auto-update-conda: true
           python-version: ${{ matrix.python }}
-          activate-environment: grakn-env
-      - name: Conda info
-        shell: bash -l {0}
-        run: conda info
-      - name: Conda list
-        shell: pwsh
-        run: conda list
-
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
           # architecture: ${{ matrix.arch }}
       
 
-
       - name: Set ENV Variables for 🐍 📞
         run: |
-          echo ENV["PYTHON"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME_PYTHONHOME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
-          echo ENV["PYCALL_JL_RUNTIME"] = "${{ env.pythonLocation }}" >> $GITHUB_ENV
+          echo ENV["PYTHON"] = "${{ env.pythonLocation }}/bin/python" >> $GITHUB_ENV
+
       - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      
+      - name: Show Python path
+        run: |
+          echo $ENV["PYTHON"]
 
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"
     
-
+      - uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}-${{ hashFiles('requirements.txt') }}
 
       # Julia Tasks
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+        env:
+          PYTHON : "${{ env.pythonLocation }}/bin/python"
+          PYCALL_JL_RUNTIME_PYTHONHOME: "${{ env.pythonLocation }}/bin/python"
+          PYCALL_JL_RUNTIME: "${{ env.pythonLocation }}/bin/python"
 
 
       - uses: actions/cache@v2
@@ -94,12 +96,13 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      - name: Build Julia pkg
-        run: |
-          echo $ENV["PYTHON"]
-          echo $ENV["PYCALL_JL_RUNTIME_PYTHONHOME"]
-          echo $ENV["PYCALL_JL_RUNTIME"]
+
+      
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON : "${{ env.pythonLocation }}/bin/python"
+          PYCALL_JL_RUNTIME_PYTHONHOME: "${{ env.pythonLocation }}/bin/python"
+          PYCALL_JL_RUNTIME: "${{ env.pythonLocation }}/bin/python"
               
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
