--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
         # file with notes on your contribution.
         # git diff --name-only $(git merge-base origin/master HEAD) | grep '^CHANGELOG.md$' && echo "Thanks for helping keep our CHANGELOG up-to-date!"
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.version }} - Python ${{ matrix.python-version }}
+      ${{ matrix.os }} ${{ matrix.architecture }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -29,7 +30,7 @@ jobs:
           - '1.5'
           - 'nightly'
         python: [3.7]
-        # python-path: [RUNNER_TOOL_CACHE/Python/*]
+        
         os:
           - ubuntu-latest
           - macOS-latest
@@ -46,9 +47,7 @@ jobs:
 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-          # architecture: ${{ matrix.arch }}
-      
-
+            
       - name: Set ENV Variables for 🐍 📞
         run: |
           echo ENV["PYTHON"] = "${{ env.pythonLocation }}/bin/python" >> $GITHUB_ENV
@@ -57,10 +56,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-#      - name: Show Python path
-#        run: |
-#          echo $ENV["PYTHON"]
+      
 
       - name: Get pip cache dir
         id: pip-cache
