--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,26 @@ name: CI
 on:
   - push
   - pull_request
+
+
 jobs:
+
+  changelog:
+    name: CHANGELOG
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Check that CHANGELOG has been updated (deactivated for now)
+      run: |
+        # If this step fails, this means you haven't updated the CHANGELOG.md
+        # file with notes on your contribution.
+        # git diff --name-only $(git merge-base origin/master HEAD) | grep '^CHANGELOG.md$' && echo "Thanks for helping keep our CHANGELOG up-to-date!"
   test:
-    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.version }} - Python ${{ matrix.python }}
+      ${{ matrix.os }} ${{ matrix.architecture }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -12,39 +29,52 @@ jobs:
         version:
           - '1.5'
           - 'nightly'
+        python: [3.7]
+        
         os:
           - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
           - x64
-        # - x86
-        # exclude:
-          # - os: macOS-latest
-          # - os: windows-latest
-          #    arch: x86
+
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 🐍
+      - name: Set up 🐍 ${{ matrix.python }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
-          architecture: ${{ matrix.arch }}
-      - name: Install dependencies
+          python-version: ${{ matrix.python }}
+
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
+            
+      - name: Set ENV Variables for 🐍 📞
+        run: |
+          echo ENV["PYTHON"] = "${{ env.pythonLocation }}/bin/python" >> $GITHUB_ENV
+
+      - name: Install dependencies 🔧
         run: |
           python -m pip install --upgrade pip
-          python -m pip install grakn-client
-
-      - name: Install dependecies 
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: install -d # Install all dependencies, including development ones
+          pip install -r requirements.txt
       
+
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "::set-output name=dir::$(pip cache dir)"
+    
+      - uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}-${{ hashFiles('requirements.txt') }}
+
+      # Julia Tasks
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: actions/cache@v1
+        
+      - uses: actions/cache@v2
         env:
           cache-name: cache-artifacts
         with:
@@ -54,18 +84,39 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
+      
       - uses: julia-actions/julia-buildpkg@v1
+        env:
+          PYTHON : python
+            
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
+
   docs:
     name: Documentation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up 🐍 
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+
+      - name: Set ENV Variables for 🐍 📞
+        run: |
+          echo ENV["PYTHON"] = "${{ env.pythonLocation }}/bin/python" >> $GITHUB_ENV
+
+      - name: Install dependencies 🔧
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
       - uses: julia-actions/setup-julia@v1
+        env:
+            PYTHON : "${{ env.pythonLocation }}/bin/python"
         with:
           version: '1'
       - run: |
@@ -81,4 +132,3 @@ jobs:
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
