--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-git+https://github.com/graknlabs/client-python#egg=client-python
+[-e] git+https://github.com/graknlabs/client-python#egg=client-python
