--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-grakn-client = "*"
+ipykernel = "*"
+behave = "*"
+setuptools = "*"
+grakn-client = "==2.0.0a4"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.8.6"
