Fixed doc generation for stable and dev doc commit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,5 +131,6 @@ jobs:
             using GraknClient
             doctest(GraknClient)'
       - run: julia --project=docs docs/make.jl
-        env:
+        env:          
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
