--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
 julia = "1"
+Conda = "1"
+PyCall = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
