--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,9 @@ version = "0.1.0"
 
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+GRPC = "052a6f42-5f7a-11eb-0d2c-53ca14949e1e"
+HPack = "28024e5f-9f70-4280-80a2-4be20479eed3"
+HTTP2 = "0ee529b6-85a9-4020-94aa-d5b2735f286b"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
