--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,50 +1,35 @@
+
 name: CI
 on:
   - push
-#   - pull_request
-
+  - pull_request
 jobs:
-
-  changelog:
-    name: CHANGELOG
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-    - uses: actions/checkout@v1
-
-    - name: Check that CHANGELOG has been updated (deactivated for now)
-      run: |
-        # If this step fails, this means you haven't updated the CHANGELOG.md
-        # file with notes on your contribution.
-        # git diff --name-only $(git merge-base origin/master HEAD) | grep '^CHANGELOG.md$' && echo "Thanks for helping keep our CHANGELOG up-to-date!"
   test:
-    name: Julia ${{ matrix.version }} - Python ${{ matrix.python }}
-      ${{ matrix.os }} ${{ matrix.architecture }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         version:
-          - '1.5'
+          - "^1.6.0-0"
           - 'nightly'
-        
         os:
           - ubuntu-latest
           - macOS-latest
           - windows-latest
         arch:
           - x64
-
+          - x86
+        exclude:
+          - os: macOS-latest
+            arch: x86
     steps:
-
-    # Julia Tasks test
+      - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-        
-      - uses: actions/cache@v2
+      - uses: actions/cache@v1
         env:
           cache-name: cache-artifacts
         with:
@@ -54,22 +39,17 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      
       - uses: julia-actions/julia-buildpkg@v1
-        env:
-          PYTHON : python
-            
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
-
   docs:
     name: Documentation
     runs-on: ubuntu-latest
     steps:
-      
+      - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
@@ -80,10 +60,11 @@ jobs:
             Pkg.instantiate()'
       - run: |
           julia --project=docs -e '
-            using Documenter: doctest
+            using Documenter: DocMeta, doctest
             using GraknClient
+            DocMeta.setdocmeta!(GraknClient, :DocTestSetup, :(using GraknClient); recursive=true)
             doctest(GraknClient)'
       - run: julia --project=docs docs/make.jl
-        env:          
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
